--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
    
 }
 
+
 .container{
     width: 100%;
     height: 100%;
@@ -83,13 +84,15 @@ p,th, td, li{
     /* position: fixed; */
     left: 0;
     bottom: 0;
+    height: 33.33vh;
     width: 100%;
     color: white;
     float: left;
+    font-size: 10px;
 }
 .icon{
     float: left;
-    margin: 45px;
+    margin: 65px;
 }
 
 h5{
@@ -105,7 +108,7 @@ li{
 #mymap {
     height: 500px; 
     min-width: 310px; 
-    max-width: 800px; 
+    max-width: 1000px; 
     margin: 0 auto; 
 }
 .loading {
@@ -115,7 +118,277 @@ li{
 }
 
 #map{
+    text-align: center;
     width: 87vw; 
-    height: 90vh;
+    height: 40vh;
     border-radius: 50px;
+}
+[class * ="col-"]{
+   width: 100%;
+
+}    
+.row::after{
+    content: "";
+    clear: both;
+    display: block;
+}
+@media only screen and(min-width: 768px) {
+    .col-1{width: 8.33%;}
+    .col-2{width: 16.66%;}
+    .col-3{width: 25%;}
+    .col-4{width: 33.33%;}
+    .col-5{width: 41.66%;}
+    .col-6{width: 50%;}
+    .col-7{width: 58.33%;}
+    .col-8{width: 66.66%;}
+    .col-9{width: 75%;}
+    .col-10{width: 83.33%;}
+    .col-11{width: 91.66%;}
+    .col-12{width: 100%;}
+    [class * ="col-"]{
+        float: left: ;
+        padding: 15px;
+        border: 1px solid red;
+
+    }    
+    .list_vn >li{
+        width: 20%;
+        height: 30vh;
+        background-color: rgb(238, 241, 241);
+        border-radius: 20px;
+        box-shadow: 0px 20px 50px rgba(111, 108, 108, 0.5);
+        list-style: none;
+        float: left;
+        padding: 20px;
+        margin: 20px;
+    }
+    p,th, td, li{
+        text-transform: uppercase;
+    }
+    
+    .box-tke-V3{
+        border-radius: 6px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px;
+        background: #f8f9fa;
+        margin-bottom: 20px;
+    
+    }
+    
+    .border {
+        border: 1px solid #dee2e6;
+    }
+    
+    .box-vn, .box-tg {
+        border-radius: 6px;
+        padding: 3px 6px;
+        display: block;
+        color: #fff;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    .box-vn {
+        background: #c9302c;
+        top: 1px;
+        left: 1px;
+    }
+    
+    .box-tg {
+      
+        background: #3071a9;
+        left: 1px;
+        top: 126px;
+    }
+    .col {
+        flex-basis: 0;
+        flex-grow: 1;
+        max-width: 100%;
+    }
+    .text-danger-new {
+        color: #c9302c;
+    
+    }
+    .text-danger-new1 {
+        color: #666;
+    }
+    .font24{
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 1;
+    }
+    
+    .footer{
+        background-color: rgb(179, 177, 177);
+        /* position: fixed; */
+        left: 0;
+        bottom: 0;
+        height: 33.33vh;
+        width: 100%;
+        color: white;
+        float: left;
+    }
+    .icon{
+        float: left;
+        margin: 45px;
+    }
+    
+    h5{
+        margin: 25px;
+    }
+    li{
+        list-style: none;
+        padding: 5px;
+        margin: 1px;
+        margin-left: -5px;
+       
+    }
+    #mymap {
+        height: 500px; 
+        min-width: 310px; 
+        max-width: 1000px; 
+        margin: 0 auto; 
+    }
+    .loading {
+        margin-top: 10em;
+        text-align: center;
+        color: gray;
+    }
+    
+    #map{
+        width: 87vw; 
+        height: 90vh;
+        border-radius: 50px;
+    }
+    
+}
+@media only screen and(max-width: 600px) {
+    .col-1{width: 8.33%;}
+    .col-2{width: 16.66%;}
+    .col-3{width: 25%;}
+    .col-4{width: 33.33%;}
+    .col-5{width: 41.66%;}
+    .col-6{width: 50%;}
+    .col-7{width: 58.33%;}
+    .col-8{width: 66.66%;}
+    .col-9{width: 75%;}
+    .col-10{width: 83.33%;}
+    .col-11{width: 91.66%;}
+    .col-12{width: 100%;}
+    [class * ="col-"]{
+        float: left: ;
+        padding: 15px;
+        border: 1px solid red;
+
+    }  
+    .list_vn >li{
+        width: 20%;
+        height: 30vh;
+        background-color: rgb(238, 241, 241);
+        border-radius: 20px;
+        box-shadow: 0px 20px 50px rgba(111, 108, 108, 0.5);
+        list-style: none;
+        float: left;
+        padding: 20px;
+        margin: 20px;
+    }
+    p,th, td, li{
+        text-transform: uppercase;
+    }
+    
+    .box-tke-V3{
+        border-radius: 6px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px;
+        background: #f8f9fa;
+        margin-bottom: 20px;
+    
+    }
+    
+    .border {
+        border: 1px solid #dee2e6;
+    }
+    
+    .box-vn, .box-tg {
+        border-radius: 6px;
+        padding: 3px 6px;
+        display: block;
+        color: #fff;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    .box-vn {
+        background: #c9302c;
+        top: 1px;
+        left: 1px;
+    }
+    
+    .box-tg {
+      
+        background: #3071a9;
+        left: 1px;
+        top: 126px;
+    }
+    .col {
+        flex-basis: 0;
+        flex-grow: 1;
+        max-width: 100%;
+    }
+    .text-danger-new {
+        color: #c9302c;
+    
+    }
+    .text-danger-new1 {
+        color: #666;
+    }
+    .font24{
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 1;
+    }
+    
+    .footer{
+        background-color: rgb(179, 177, 177);
+        /* position: fixed; */
+        left: 0;
+        bottom: 0;
+        height: 33.33vh;
+        width: 100%;
+        color: white;
+        float: left;
+    }
+    .icon{
+        float: left;
+        margin: 45px;
+    }
+    
+    h5{
+        margin: 25px;
+    }
+    li{
+        list-style: none;
+        padding: 5px;
+        margin: 1px;
+        margin-left: -5px;
+       
+    }
+    #mymap {
+        height: 500px; 
+        min-width: 310px; 
+        max-width: 1000px; 
+        margin: 0 auto; 
+    }
+    .loading {
+        margin-top: 10em;
+        text-align: center;
+        color: gray;
+    }
+    
+    #map{
+        width: 87vw; 
+        height: 90vh;
+        border-radius: 50px;
+    }
+      
 }
